# Logicore

./: .env.example  .gitignore  LICENSE  MEMORY_RAG_PATTERN.md  README.md  mint.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run_all_tests.py  system_prompt.txt  temp_sqlite_script.py  test_from_node_e.pptx  test_trace.py
.github/workflows/: mintlify-deploy.yml  publish-pypi.yml
debug/: 00_create.py  01_read.py  02_update.py  03_delete.py  04_list.py  05_telemetry.py  06_attachment.py  07_snapshot.py  08_supabase_diagnose.py  09_dns_check.py  README.md  db_inspector.ipynb
deploy/: CHANGELOG.md  RELEASE_CHECKLIST.md  build_and_publish.ps1  build_and_publish.sh  seo_checklist.md
docs/: CHANGELOG.md  DESIGN_CONFIG_RESTRUCTURE.md  IMPLEMENTATION_GUIDE.md  README.md  SESSION_PERSISTENCE_ARCHITECTURE.md  SESSION_PERSISTENCE_BACKEND_EXTENSION.md  SESSION_PERSISTENCE_CLOUD_DBS.md  SESSION_PERSISTENCE_USER_GUIDE.md  contributing.md  faq.md  installation.md  introduction.md  quickstart.md  runtime-implementation-summary.md
docs/concepts/: agents.md  memory.md  providers.md  skills.md  streaming.md  tools.md
docs/guidelines/: custom-agents.md
docs/resources/: agentic-fundamentals-gap-audit.md  changelog.md  contribute.md  contributing.md  contribution-guide.md  faq.md  release-notes.md  repo-research-notes.md
examples/: __init__.py  advanced_runtime_agent.py  native_chatbot.py  power_chatbot.py  sample_agent.py  simple_runtime_chatbot.py  streaming_chatbot.py  streaming_cli.py
logicore/: __init__.py  logging_setup.py  mcp_client.py  reloader.py  session_manager.py  telemetry.py  user_profile_manager.py
logicore/agent/: __init__.py  agent_config.py  agent_prompt.py  agent_protocol.py  agent_sessions.py  agent_skills.py  agent_streaming.py  attachments.py  base.py  builtin_hooks.py  chat_orchestrator.py  feedback_detector.py  feedback_handler.py  hallucination_checker.py  input_enricher.py  operational_memory.py  permissions.py  progressive_compressor.py  session.py  telemetry_recorder.py  tool_executor.py  tool_guardrails.py  tool_pipeline.py  turn_retry_state.py
logicore/agents/: __init__.py  agent.py  agent_basic.py  agent_mcp.py  agent_smart.py  copilot.py  loop_detection.py
logicore/caching/: __init__.py  prompt_cache.py
logicore/config/: __init__.py  env.py  prompt_builder.py  prompts.py  settings.py
logicore/context/: __init__.py  compressor.py  token_budget.py
logicore/context_engine/: __init__.py  engine.py  message_pipeline.py  prompt_assembler.py  token_estimator.py  (+1 more)
scripts/: chat_with_storage.py  chatbot.py  media_s3_storage.py  memory_chat.py  migrate_toml_to_env.py  simple_chat.py  smart_agent_demo.py  validate_structure.py
tests/: conftest.py  test_streaming.py
(+314 files in other folders)
